Added code fencing

--- a/pirate.html
+++ b/pirate.html
@@ -80,10 +80,9 @@
         <p>Click for help.</p>
     </div>
 
-    <div id="help-report">
-        <p>Help Report:</p>
-        <p>- Remember to carefully analyze clues.</p>
-        <p>- Avoid clicking on suspicious locations.</p>
+    <div id="help">
+        <p>Help Report</p>
+    
     </div>
     <div class="game-adda">
    
