--- a/merger.html
+++ b/merger.html
@@ -66,7 +66,7 @@
 <p> Press the button to create an new element of type div and then add it to the container.
 	</p>
 	<input type ="button" class="button" id ="addEndButton"  value ="Add end">
-	<!-- <input type ="button" class="buttonaa" id ="addFrontButton"  value ="Add Front">
+	<input type ="button" class="buttonaa" id ="addFrontButton"  value ="Add Front">
 	<input type ="button" class="buttonbb" id ="removeButton"  value ="Remove">
 
 
@@ -109,5 +109,5 @@ document.getElementById("removeButton").addEventListener("click", function () {
 
 		container.insertBefore(newDiv, container.firstChild);
 	});
-</script> -->
+</script>
 </html>	
