--- a/merger.html
+++ b/merger.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 	 <head>
-		 <title>Mergeing</title>
+		 <title>Mergers</title>
  <style>
      .flex-container {
       display: flex;  flex-direction:row;
-      background-color: orange;
+      background-color: silver;
   }
 
 .flex-container > div {  /*div children of the flex container*/
   background-color: lightcyan; 
-  margin: 10px;  padding: 20px;  font-size: 30px;
+  margin: 12px;  padding: 22px;  font-size: 32px;
 }
 
 /* Responsive layout */
