Added code fencing

--- a/merger.html
+++ b/merger.html
@@ -68,6 +68,7 @@
 	<input type ="button" class="button" id ="addEndButton"  value ="Add end">
 	<input type ="button" class="buttonaa" id ="addFrontButton"  value ="Add Front">
 	<input type ="button" class="buttonbb" id ="removeButton"  value ="Remove">
+	<input type ="button" class="button3" id ="swap"  value ="swap" onclick="swap()">
 
 
 </body>
